2001-06-10  Bruno Haible  <haible@clisp.cons.org>

	* Makefile.am: (installdirs): New dependency. Yet another automake bug.

2001-05-30  Bruno Haible  <haible@clisp.cons.org>

	* gettext.texi (Plural forms): Remove remark about continuation lines.
	Add information about Croatian, Portuguese, Latvian, Korean.

2001-05-23  Bruno Haible  <haible@clisp.cons.org>

	* gettext-0.10.38 released.

2001-05-22  Bruno Haible  <haible@clisp.cons.org>

	* gettext.texi (Creating): Change "8-bit" to "8bit".

2001-05-16  Bruno Haible  <haible@clisp.cons.org>

	* matrix.texi: Update.
	* nls.texi (STATUS): Likewise.

2001-05-15  Bruno Haible  <haible@clisp.cons.org>

	* Makefile.am (install-dvi, gettext.ps, install-ps, install-pdf,
	gettext.html, gettext_toc.html, install-html-monolithic): Don't use $<.
	Reported by Paul Eggert.

2001-05-11  Bruno Haible  <haible@clisp.cons.org>

	* gettext.texi (aclocal): Add glibc21.m4 to the list of needed files.

2001-04-19  Bruno Haible  <haible@clisp.cons.org>

	* gettext-0.10.37 released.

2001-04-17  Bruno Haible  <haible@clisp.cons.org>

	* Makefile.am (DVIPS): Use @DVIPS@. If dvips is missing, the
	gettext.ps target will fail.
	(TEXI2PDF): Use @TEXI2PDF@. If texi2pdf is missing, the gettext.pdf
	target will fail.
	(TEXI2HTML): Use @TEXI2HTML@. If texi2html is missing, the gettext.html
	target will fail.
	(gettext_toc.html): Rewrite so it will do nothing but not fail, if
	texi2html is missing.

2001-04-17  Bruno Haible  <haible@clisp.cons.org>

	* Makefile.am (install-html-split): Install into correct directory.
	Don't use $<.
	(RM): New variable.

2001-04-17  Bruno Haible  <haible@clisp.cons.org>

	* ISO_3166: New file.
	* iso-3166.sed: New file.
	* iso-639.sed: Renamed from iso-apdx.sed.
	* Makefile.am (gettext_TEXINFOS): Remove iso-apdx.sed, add iso-639.sed
	and iso-3166.sed.
	(EXTRA_DIST): Likewise. Add ISO_3166.
	(iso-639.texi): Renamed rule from iso-apdx.texi.
	(iso-3166.texi): New rule.